<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Task4.Task4">
    //3 textview, 2 edit text, 1 radio button , 1 button
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id2"
        android:text="@string/em_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_id2"
        android:hint="@string/em_id"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/tv_id2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id2"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name2"
        app:layout_constraintStart_toStartOf="@+id/tv_id2"
        app:layout_constraintTop_toBottomOf="@+id/et_id2"
        android:layout_marginTop="20dp"
        android:text="@string/em_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name2"
        app:layout_constraintStart_toStartOf="@+id/et_id2"
        app:layout_constraintTop_toBottomOf="@+id/et_id2"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/et_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_isManager"
        app:layout_constraintStart_toStartOf="@id/tv_name2"
        app:layout_constraintTop_toBottomOf="@+id/et_name2"
        android:layout_marginTop="20dp"
        android:text="@string/is_manager"

        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/is_manager"
        app:layout_constraintStart_toStartOf="@id/et_name2"

        app:layout_constraintTop_toTopOf="@id/tv_isManager"
        app:layout_constraintBottom_toBottomOf="@id/tv_isManager"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/is_manager"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/lv_task4"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_task4"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        android:layout_marginTop="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>