<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/name_tv"
        android:text="@string/name"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:paddingVertical="@dimen/padding_medium"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_et"
        android:textSize="@dimen/font_size_medium"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintTop_toTopOf="@id/name_tv"
        app:layout_constraintLeft_toRightOf="@id/name_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constrainedWidth="true"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/thumbnail_tv"
        android:text="@string/thumbnail"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="@dimen/padding_medium"
        android:layout_marginTop="@dimen/layout_margin_medium"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thumbnail_spinner"
        android:prompt="@string/thumbnail"
        app:layout_constraintLeft_toRightOf="@id/thumbnail_tv"
        app:layout_constraintTop_toTopOf="@id/thumbnail_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="@dimen/layout_margin_medium"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/promotion_tv"
        android:text="@string/promotion"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_medium"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/thumbnail_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="@dimen/padding_medium"
        android:layout_marginTop="@dimen/layout_margin_medium" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/promotion_checkbox"
        app:layout_constraintLeft_toRightOf="@id/promotion_tv"
        app:layout_constraintTop_toTopOf="@id/promotion_tv" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_btn"
        android:text="@string/adddish"
        app:layout_constraintTop_toBottomOf="@id/promotion_checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="#008000"/>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dish_gridview"
        app:layout_constraintTop_toBottomOf="@id/add_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:isScrollContainer="true"
        android:numColumns="2"
        app:layout_constrainedHeight="true"
        android:gravity="center"/>



</androidx.constraintlayout.widget.ConstraintLayout>